deploy/kubernetes/payments-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: paymentsservice
  namespace: payments
spec:
  ports:
  - name: http
    targetPort: 3000
    port: 3000
  selector:
    app: payments
    microservice: app
