deploy/kubernetes/payments-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payments-ingress
  namespace: payments
spec:
  ingressClassName: ingress-http.gateway
  rules:
  - http:
      paths:
      - path: /services(/payments/.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: payments-service
            port:
              number: 3000
